# Kung-Fu-Chess

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat
.claude/: settings.json
demo/: AnimatedSprite.cpp  AnimatedSprite.hpp  AnimationManager.cpp  AnimationManager.hpp  AssetManager.cpp  AssetManager.hpp  BoardRenderer.cpp  BoardRenderer.hpp  CMakeLists.txt  ChessRenderer.cpp  ChessRenderer.hpp  DemoBoardState.cpp  DemoBoardState.hpp  DemoConfig.hpp  MouseHandler.cpp  MouseHandler.hpp  PieceRenderer.cpp  PieceRenderer.hpp  img.cpp  img.hpp  main.cpp
src/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  BoardController.cpp  BoardController.hpp  BoardParser.cpp  BoardParser.hpp  CompletedMove.hpp  Game.cpp  Game.hpp  GameController.cpp  GameController.hpp  GameEngine.cpp  GameEngine.hpp  GameSnapshot.hpp  GameStateMachine.cpp  GameStateMachine.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Move.cpp  Move.hpp  MoveCompletionService.cpp  MoveCompletionService.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceFactory.cpp  PieceFactory.hpp  Queen.cpp  Queen.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp  Rook.cpp  Rook.hpp  RuleEngine.cpp  RuleEngine.hpp  (+3 more)
src/arbiter/: CollisionResolver.cpp  CollisionResolver.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
src/config/: PieceConfigReader.cpp  PieceConfigReader.hpp  PieceSpeedConfig.cpp  PieceSpeedConfig.hpp
src/controllerClick/: GameController.cpp  GameController.hpp
src/game_engine/: BoardController.cpp  BoardController.hpp  ClickContext.hpp  ClickPreparationService.cpp  ClickPreparationService.hpp  CooldownService.cpp  CooldownService.hpp  GameEngine.cpp  GameEngine.hpp  GameSnapshot.hpp  GameStateMachine.cpp  GameStateMachine.hpp  MoveCompletionService.cpp  MoveCompletionService.hpp  MoveRecorder.cpp  MoveRecorder.hpp  ScoreTracker.cpp  ScoreTracker.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp
src/model/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  Constants.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Position.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  types.hpp
src/movement/: CompletedMove.hpp  Move.cpp  Move.hpp  PieceFactory.cpp  PieceFactory.hpp
src/network/: ClientSession.cpp  ClientSession.hpp  GameServer.cpp  GameServer.hpp  JsonProtocol.cpp  JsonProtocol.hpp  network_main_client.cpp  network_main_server.cpp
src/rule_engine/: RuleEngine.cpp  RuleEngine.hpp
src/text_io/: BoardParser.cpp  BoardParser.hpp  TextTestRunner.cpp  TextTestRunner.hpp  main.cpp
tests/: GameOverTests.cpp  GameTests.cpp  GameTests.cpp.bak  PieceMovementTests.cpp
